minikube/deployments.yaml
# Backend Deployment
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: sandbox-soc-backend
  labels:
    app: soc-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: soc-backend
  template:
    metadata:
      labels:
        app: soc-backend
    spec:
      containers:
        - name: backend
          image: "soc-backend:sandbox"
          imagePullPolicy: IfNotPresent
          args: [ "gunicorn", "-b 0.0.0.0:8000", "manage:app"]
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 130
            timeoutSeconds: 60
            periodSeconds: 120
          readinessProbe:
            tcpSocket:
              port: 8000
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 120
            successThreshold: 1
            timeoutSeconds: 60
          resources:
            requests:
              cpu: 100m
              memory: 128Mi

---
# Database image
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: sandbox-soc-database
  labels:
    app: soc-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soc-database
  template:
    metadata:
      labels:
        app: soc-database
    spec:
      containers:
        - name: database
          image: "postgres:9.6"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 130
            timeoutSeconds: 60
            periodSeconds: 120
          readinessProbe:
            tcpSocket:
              port: 5432
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 120
            successThreshold: 1
            timeoutSeconds: 60
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
